# C-Unit-Testing

./: README.md
Question 1/code/: ass3q1.c  avg_and_max.c
Question 1/output/: ass3q1.out
Question 2/code/: ass3q2.c  avg_and_max.c
Question 2/output/: ass3q2.out
Question 3/code/: CMakeLists.txt  ass3q3.c  avg_and_max.c
Question 3/output/: ass3q3.out
Question 4/code/: ass3q3.c  ass3q4.c  avg_and_max.h
Question 4/output/: ass3q4.out
Question 5/code/: CMakeLists.txt  ass3q5.c  fact.c  fact.h
Question 5/output/: ass3q5.out
Question 6/Algorithm 1(Divison)/code/: CMakeLists.txt  ass3q6a.  gcd.c  main.c
Question 6/Algorithm 1(Divison)/output/: ass3q6a.out
Question 6/Algorithm 2(Subtraction)/code/: ass3q6b.c  gcd.h  main.c
Question 6/Algorithm 2(Subtraction)/output/: ass3q6b.out
Question 6/Algorithm 3(Recursive)/code/: ass3q6c.c  main.c
Question 6/Algorithm 3(Recursive)/output/: ass3q6c.out
